// 指定proto版本
syntax = "proto3";
// 管理proto文件的包名
package moviecontroller;
// 导入common.proto
import "common/common.proto";
// 生成java代码的包名
option java_package = "com.proto.moviecontroller";
/*
  是否生成多个java文件
  如果是的话，MovieRequest、MovieResponse会分别生成一个java文件
  如果不是的话，MovieRequest、MovieResponse会生成在同一个java文件中
*/
option java_multiple_files = true;
/*
  生成java代码后的最外面的类名，默认情况会以.proto文件名为准
  如果java_multiple_files设置为false,MovieRequest、MovieResponse会放在该类中
*/
option java_outer_classname = "MovieController";

message MovieRequest {
  string userid = 1;
  common.Genre genre = 2;
}

message MovieResponse {
  common.Movie movie = 1;
}

service MovieControllerService {
  // unary rpc call to retrieve a movie
  rpc getMovie(MovieRequest) returns (MovieResponse) {};
}
